--- a/Travail/404.html
+++ b/Travail/404.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Link to CSS stylesheet -->
-<link rel="stylesheet" type="text/css" href="css/404.css">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
+<!-- Link to CSS stylesheet -->
+<link rel="stylesheet" type="text/css" href="css/404.css">
 
 <title>Error 404</title>
 
@@ -20,9 +20,9 @@
         <div class="404-container">
 
           <div class="inner 404">
-            <h1 class="404"><strong>404</strong></h1>
-            <h3 class="notfound"><strong>Not Found</strong></h2>
-            <h5 class="text404">The resource requested could not be found on the server !</h3>
+            <h1><strong>404</strong></h1>
+            <h3><strong>Not Found</strong></h3>
+            <h5>The resource requested could not be found on the server !</h5>
           </div>
 
           <div class="footer">
