--- a/Travail/contact.html
+++ b/Travail/contact.html
@@ -12,13 +12,14 @@
  </head>
  <body>
  	<div class="container-fluid">
- 		<div class="header">
+    <div class="row col-md-6 text-center">
+ 		   <div class="header">
  			<h2 class="text-center"><strong>Get in Touch</strong></h2>
- 			<p class="header img text-center"><img src="images/separateur_01.png" width="54px" height="54px"></p>
- 			<h3 class="text-center">Nullam quis risus urna mollis ornare vel eu leo. Integer posuere eral a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+ 			<p class="text-center"><img src="images/s1.jpg"></p>
+ 			<h4 class="text-center">Nullam quis risus urna mollis ornare vel eu leo. Integer posuere eral a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</h4>
  		</div>
 
- 		<div class="wrapper text-center">
+ 		<div class="wrapper">
  			<div class="row">
         <div class="col-md-4">
           <p><img src="images/icon-worldmap.png"></p>
@@ -37,14 +38,13 @@
         </div>
       </div>
  		</div>
-
- 		<div class="wrapper2">
- 			<div class="row"><strong>Feel Free to Drop Us a Line</strong>
- 			</div>
- 			<h5>Nullam quis risus urna mollis ornare vel eu leo. Integer posuere eral a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</h5>
- 		</div>
- 		<div class="form">
- 			<form>
+    <div class="wrapper">
+      <div class="row"><strong>Feel Free to Drop Us a Line</strong>
+      </div>
+      <h5>Nullam quis risus urna mollis ornare vel eu leo. Integer posuere eral a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</h5>
+    </div>
+    <div class="form">
+      <form>
   <div class="form-inline col-md-6">
     <label for="exampleInputEmail1"></label>
     <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Your name">
@@ -56,7 +56,8 @@
   </div>
   <button type="submit" class="btn btn-default">SEND</button>
 </form>
- 		</div>
- 	</div>
+    </div>
+    </div>
+    </div>
  </body>
  </html>
