--- a/Travail/contact.html
+++ b/Travail/contact.html
@@ -138,5 +138,11 @@
     </div>
    </div>
   </div><!-- Fin balise container-fluid -->
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="js/bootstrap.min.js"</script>
+
  </body>
  </html>
