--- a/Travail/home.html
+++ b/Travail/home.html
@@ -4,8 +4,10 @@
 <head>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Latest compiled and minified CSS -->
+<!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+<!-- Latest compiled and minified FontAwesome CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <!-- Link to CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/home.css">
 
@@ -13,9 +15,10 @@
 </head>
 
 <body>
+<div class="container-fluid ctn-main">
 	<!-- Static navbar -->
 <nav class="navbar navbar-default navbar-static-top">
-      <div class="container cnavbar">
+      <div class="container ctn-navbar">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -23,23 +26,117 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand brandmail" href="#"><span class="glyphicon glyphicon-envelope text-center"></span>hello@email.com</a>
-          <a class="navbar-brand brandphone" href="#"><span class="glyphicon glyphicon-phone"> </span>hello@email.com</a>
+          <a class="navbar-brand brandmail" href="#"><span class="glyphicon glyphicon-envelope text-center"></span> hello@email.com</a>
+          <a class="navbar-brand brandphone" href="#"><span class="glyphicon glyphicon-earphone"></span> +00(123) 456 78 90</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#/">Default<span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Static top</a></li>
-            <li><a href="#">Fixed top</a></li>
+            <li class="socialicon"><a class="btn btn-social-icon btn-pinterest" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-pinterest']);">
+            <span class="fa fa-pinterest"></span></a></li>
+            <li><span class"divider-vertical"></span></li>
+            <li><a class="btn btn-social-icon btn-facebook" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);">
+            <span class="fa fa-facebook"></span></a></li>
+            <li><a class="btn btn-social-icon btn-twitter" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-twitter']);">
+            <span class="fa fa-twitter"></span></a></li>
+            <li><a class="btn btn-social-icon btn-flickr" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-flickr']);">
+            <span class="fa fa-flickr"></span></a></li>
+            <li><a class="btn btn-social-icon btn-reddit" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-reddit']);">
+            <span class="fa fa-reddit"></span></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!--/.container cnavbar -->
     </nav>
 
+<!-- Navbar Menu -->
+<div class="container-fluid ctn-navmenu">
+<nav class="navbar-menu navbar-default">
+  
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><img src="images/logo-dark.png"></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="#">HOME <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">SLIDERS</a></li>
+        <li><a href="#">HEADERS</a></li>
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">PAGES</a></li>
+        <li><a href="#">FEATURES</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<!-- Carousel -->
+<div class="container ctn-carousel">
+<div data-ride="carousel" class="carousel slide" id="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li class="active" data-slide-to="0" data-target="#carousel"></li>
+        <li data-slide-to="1" data-target="#carousel" class=""></li>
+        <li data-slide-to="2" data-target="#carousel" class=""></li>
+      </ol>
+      <div role="listbox" class="carousel-inner">
+        <div class="item active">
+          <img alt="First slide" src="images/city.jpg" class="first-slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Example headline.</h1>
+              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <p><a role="button" href="#" class="btn btn-lg btn-primary">Sign up today</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img alt="Second slide" src="images/city.jpg" class="second-slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Another example headline.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a role="button" href="#" class="btn btn-lg btn-primary">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img alt="Third slide" src="images/city.jpg" class="third-slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>One more for good measure.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a role="button" href="#" class="btn btn-lg btn-primary">Browse gallery</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a data-slide="prev" role="button" href="#myCarousel" class="left carousel-control">
+        <span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a data-slide="next" role="button" href="#myCarousel" class="right carousel-control">
+        <span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- Fin carousel -->
+    </div><!-- Fin container ctn-carousel -->
+</div><!-- Fin container-fluid ctn-main -->
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="js/bootstrap.min.js"</script>
+<!-- Bootstrap social for social icons and buttons -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.12.0/bootstrap-social.css"</script>
+
 </body>
 
 </html>
